--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "py-ami-client"
-version = "0.0.1"
+version = "0.0.2"
 description = "Python Asterisk Management Interface Client"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -17,7 +17,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = []
+dependencies = [
+    "classmods==0.1.3",
+]
 requires-python = ">=3.9"
 
 [project.urls]
