--- a/.env_example
+++ b/.env_example
@@ -45,6 +45,7 @@ AMICLIENT_KEY=
 ###### events 
 ####
 ## events (Optional[Union[Literal['on', 'off'], list[str]]]): Event subscriptions or list.
+## event_queue_maxsize (int): Size of queue of events for dispatching.
 ## Default=None
 ####
 AMICLIENT_EVENTS=
@@ -62,5 +63,12 @@ AMICLIENT_TIMEOUT=
 ## Default=None
 ####
 AMICLIENT_SOCKET_BUFFER=
+
+###### event_queue_maxsize 
+####
+## event_queue_maxsize (int): Size of queue of events for dispatching.
+## Default=None
+####
+AMICLIENT_EVENT_QUEUE_MAXSIZE=
 
 #################################
